--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
         "php": "^8.1",
         "bezhansalleh/filament-shield": "^3.0",
         "doctrine/dbal": "^3.7",
-        "filament/filament": "3.0-stable",
+        "filament/filament": "3.0.*",
         "guzzlehttp/guzzle": "^7.2",
+        "hasnayeen/themes": "^3.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
